--- a/etusivu.html
+++ b/etusivu.html
@@ -1,6 +1,6 @@
 <div id="content">
-  <h3>Etusivu</h3>
-    <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
+  <h3>Vivamus maximus!</h3>
+    <p>Ut sem quam, lacinia ut blandit accumsan, bibendum ut magna. Morbi venenatis odio dolor, at condimentum nisi sagittis sit amet. Ut venenatis est in sem euismod imperdiet sit amet vel dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rhoncus nisl eleifend maximus blandit. Aliquam ullamcorper congue vulputate. Nulla vitae laoreet tellus, non euismod felis. Curabitur efficitur tincidunt nisl ac ultrices. Curabitur a dapibus tellus, vitae dapibus diam. Ut rutrum porttitor tellus, id pulvinar nunc lacinia elementum.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus egestas libero id sem finibus, at pharetra augue sollicitudin. Cras sed porttitor ipsum, vel bibendum enim. Cras rutrum auctor suscipit. In hac habitasse platea dictumst. Donec ultrices justo ut tempus condimentum. Etiam ac lacus sed diam iaculis imperdiet quis quis elit. Donec porttitor elementum nisi, sit amet venenatis velit mattis at. Donec nisi dolor, auctor quis ante vitae, tempor mollis arcu. Sed vitae pellentesque elit.</p>
 
     <!-- <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a> -->
