Added background music and player for it

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <!-- Custom CSS -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
-  <link href="css/custom-styles.css" rel="stylesheet">
+    <link href="css/custom-styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -58,6 +59,32 @@
                     <a href="/pemberley-main" rel="tab">Keskusaukio</a>
                 </li>
             </ul>
+
+            <div id="sidebarContacts">
+                <ul title="Yhteystiedot">
+                    <li><a href="http://www.virtuaalihevoset.net/?vrl/jaesenyys/profiili.html?hlo=00406">Tilli (VRL-00406)</a></li>
+                    <li><i class="fa fa-envelope-o"></i> 
+                        <a href="mailto:maatila.pemberley@gmail.com">maatila.pemberley@gmail.com</a>
+                    </li>
+                    <li><i class="fa fa-skype"></i>
+                        simtilli
+                    </li>
+                    <li><i class="fa fa-twitter"></i>
+                        <a href="https://twitter.com/pemberleysim">Pemberleysim</a>
+                    </li>
+                    <li><i class="fa fa-google-plus"></i>
+                        <a href="https://plus.google.com/115631805497784734900">Pemberley</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div id="backgroundAudio">
+                <audio controls="" loop="" preload="" title="Taustamusiikki">
+                 <source src="audio/winter.mp3" type="audio/mpeg"></source>
+                 Your browser does not support the audio element.
+                </audio>
+            </div>
+
         </div>
         <!-- /#sidebar-wrapper -->
 
