--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                     <a href="#tallit" rel="tab">Tallit</a>
                 </li>
                 <li>
-                    <a href="/pemberley-main" rel="tab">Kennelit</a>
+                    <a href="#kennelit" rel="tab">Kennelit</a>
                 </li>
                 <li>
-                    <a href="/pemberley-main" rel="tab">Villieläimet</a>
+                    <a href="#subpage" rel="tab">Subpage</a>
                 </li>
                 <li>
                     <a href="/pemberley-main" rel="tab">Päiväkirja</a>
@@ -114,6 +114,7 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.2/isotope.pkgd.js"></script>
 
     <!-- Menu Toggle Script -->
     <script>
