--- a/kennelit.html
+++ b/kennelit.html
@@ -1,5 +1,5 @@
 <div id="content">
-  <h3>Tallit</h3>
+  <h3>Kennelit</h3>
     <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
 
     <section class="main-raise col-lg-12">
